# hmwk_acou_sig

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: ffttest.yml  ffttest_ubu.yml  ffttest_win.yml  pip.yml
fftwtest/: CMakeLists.txt  generic.cpp  pwelch.cpp  useeigeninternal.cpp  withomp.cpp
inc/: cmmnfft.h
src/: dummy.cpp  dummy.hpp  main.cpp
tests/: test_basic.py  test_generic.py  test_justforci.py  test_omp.py
